--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "helmet": "^3.13.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.6",
